--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -2,7 +2,7 @@
 import Icon from "@components/common/Icon.astro";
 ---
 
-<section class="section-intro | pt-15">
+<section class="section-intro | pt-20">
   <div class="even-columns">
     <div class="intro flow flow-large">
       <p>
@@ -18,22 +18,20 @@ import Icon from "@components/common/Icon.astro";
       </p>
       <div class="action-buttons | flex gap-4">
         <a target="_blank" href="https://cal.com/hadad" class="button"
-          >Let's talk</a
-        >
-        <a
-          target="_blank"
-          href="https://bit.ly/hadad-cv"
-          class="flex center gap-1 fw-semi-bold highlight-accent decoration-none fs-sm"
-          >Resume <Icon
-            icon="link"
-            size="10"
-            data-class="main-illustration"
-          /></a
-        >
+          >Let's talk</a>
+        <!--<a-->
+        <!--  target="_blank"-->
+        <!--  href="https://bit.ly/hadad-cv"-->
+        <!--  class="flex center gap-1 fw-semi-bold highlight-accent decoration-none fs-sm"-->
+        <!--  >Resume <Icon-->
+        <!--    icon="link"-->
+        <!--    size="10"-->
+        <!--    data-class="main-illustration"-->
+        <!--  /></a>-->
       </div>
     </div>
     <div class="illustration-container">
-      <Icon icon="persona" size="700px" color="var(--color-primary-700)" />
+      <Icon icon="avatar2" size="800px" color="var(--color-primary-700)" />
       <!-- <img src={Personna.src} alt=""> -->
     </div>
   </div>
